--- a/_posts/2019-01-04-EOS-build.md
+++ b/_posts/2019-01-04-EOS-build.md
@@ -226,7 +226,7 @@ export CPPFLAGS="-I/usr/local/opt/sqlite/include:$CPPFLAGS"
 export LDFLAGS="-L/usr/local/opt/openssl/lib:$LDFLAGS"
 export CPPFLAGS="-I/usr/local/opt/openssl/include:$CPPFLAGS"
 export PATH=/usr/local/opt/openssl/bin:$PATH
-export LDFLAGS="-L/usr/local/opt/llvm@4/lib":$LDFLAGS
+export LDFLAGS="-L/usr/local/opt/llvm@4/lib:$LDFLAGS"
 export CPPFLAGS="-I/usr/local/opt/llvm@4/include:$CPPFLAGS"
 export PATH="/usr/local/opt/llvm@4/bin:$PATH"
 export LDFLAGS="-L/usr/local/opt/llvm@4/lib -Wl,-rpath,/usr/local/opt/llvm@4/lib:$LDFLAGS"
@@ -314,7 +314,7 @@ export CPPFLAGS="-I/usr/local/opt/sqlite/include:$CPPFLAGS"
 export LDFLAGS="-L/usr/local/opt/openssl/lib:$LDFLAGS"
 export CPPFLAGS="-I/usr/local/opt/openssl/include:$CPPFLAGS"
 export PATH=/usr/local/opt/openssl/bin:$PATH
-export LDFLAGS="-L/usr/local/opt/llvm@4/lib":$LDFLAGS
+export LDFLAGS="-L/usr/local/opt/llvm@4/lib:$LDFLAGS"
 export CPPFLAGS="-I/usr/local/opt/llvm@4/include:$CPPFLAGS"
 export PATH="/usr/local/opt/llvm@4/bin:$PATH"
 export LDFLAGS="-L/usr/local/opt/llvm@4/lib -Wl,-rpath,/usr/local/opt/llvm@4/lib:$LDFLAGS"
@@ -419,6 +419,7 @@ make: *** [test] Error 8
 
 ### 8. 실행
 
+$EOS_HOME/build/bin 디렉토리에서 아래 명령어를 실행한다.
 ```console
 >./nodeos -e -p eosio --plugin eosio::chain_api_plugin --plugin eosio::history_api_plugin --http-validate-host=false
 ```
