--- a/_posts/2019-01-04-EOS-build.md
+++ b/_posts/2019-01-04-EOS-build.md
@@ -263,7 +263,7 @@ Checking Python3 ... 		 Python3 found
 빌드과정은 식사하고 오면 될 정도로 꽤 오래 걸린다. 단, 초기에 sudo 비밀번호를 요구하고, 마지막 즈음에 또 요구한다. 비밀번호를 입력한 뒤에 밥먹고 오도록 한다.
 
 
-#### 빌드 개선 point
+#### **_Tip. 빌드 개선 point_**
 현재 기본 CMAKE 를 이용해서 빌드하고 있는데 CMAKE 는 기본적으로 single thread 에서 빌드를 수행하기 때문에 규모가 큰 프로젝트에서는 빌드를 빠르게 하기 위한 다양한 방법들을 사용한다.
 
 현재 EOS build 를 개선할만한 방법을 두 가지 정도 생각해볼 수 있다.
@@ -274,7 +274,7 @@ ninja 는 build 과정에서 옵션으로 주어서 하도록 제안하고 PR을
 
 ninja 를 EOS 팀이 받아들인다면, 빠른 빌드를 위한 옵션에 열려있다는 것으로 판단한고 이후에는 icecream 빌드를 plugin 형식으로 제안해 볼 계획이다.
 
-#### 빌드 실패
+### 3) 빌드 실패
 빌드에 실패하면 다음과 같은 에러메세지가 나면서 빌드가 종료된다.(에러 원인은 각자 다를 수 있다.)
 ```console
 CMake Error at /usr/local/Cellar/cmake/3.13.2/share/cmake/Modules/FindPackageHandleStandardArgs.cmake:137 (message):
@@ -325,7 +325,7 @@ export PATH="/usr/local/opt/gettext/bin:$PATH"
 빌드에 실패헀더라도 CMAKE 는 그 동안의 빌드 결과를 Cache 하고 있다. 따라서 오류를 해결한 뒤에 다시 빌드를 하더라도 처음부터 다 빌드하는 것이 아니라 빌드가 안되어 있는 부분만 골라서 빌드하기 때문에 크게 걱정하지 말고 오류를 해결하면 된다.
  * 단, 빌드 디렉토리에 들어가면 `CMakeCache.txt` 파일과 `CMakeFiles` 디렉토리를 확인할 수 있다. 이 파일들을 삭제하거나 수정한다면, 빌드를 처음부터 다시 수행해야하니 build 디렉토리를 건드리지 말고 잘 보존하면 된다.
  
-### 다시 빌드 실행 
+### 4) 다시 빌드 실행 
 
 ```
 >./eosio_build.sh
@@ -348,11 +348,14 @@ export PATH="/usr/local/opt/gettext/bin:$PATH"
 [ 29%] Building LLVM bitcode textdomain.c.bc
 ```
 
-#### 개선 포인트
-빌드를 수행 하다보면 waning 으로 다음과 같은 로그를 확인할 수 있다.
+#### **_Tip. 개선 포인트_**
+빌드를 수행 하다보면 waning 으로 unused-variable 또는 unused-parameter 로그를 확인할 수 있다.
+
+이 unused 변수나 메소드를 지우는 것도 open source 의 contributor 가 되는 가장 빠르고 편한 방법이다.(갸꿀?)
+ * 단, 이런 작업은 브랜치를 최신 개발 브랜치에서 빌드를 수행하고 발생한 warning 을 보고 해야한다.
 
 
-#### 빌드 성공
+### 5) 빌드 성공
 빌드에 성공하면 다음과 같은 결과를 확인할 수 있다.
 ```console
 [100%] Built target nodeos
@@ -382,7 +385,7 @@ export PATH="/usr/local/opt/gettext/bin:$PATH"
 	EOSIO wiki: https://github.com/EOSIO/eos/wiki
 ```
 
-#### warning 에 대해서
+#### **_Tip. warning 에 대해서_**
 빌드하다보면 warning 메세지들을 확인할 수 있다.
 
 warning 이 있더라도 빌드하고 프로그램 실행에 문제는 없다. 하지만 프로그램이 돌다가 문제가 될 수 있는 warning 들이 있는데, 대표적인 것은 link 문제이다.
